# CCN

./: JULIETTEY20V171 (1).urdf  README.md  build.gradle  settings.gradle
DOCKERINFO/: ChatDockerfile  README.md  carmine_ros1.txt  entrypoint.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
pepper/: package.xml  setup.cfg  setup.py
pepper/launch/: display.launch.py  gazebo.launch  gazebo.launch.py  test.launch.py
pepper/pepper/: FlaskServer.py  KeyboardCommands.py  RobotSimulator.py  connection.py  pepperCode.py
pepper/pepper_meshes/cmake/: pepper_meshesConfig.cmake
pepper/rviz/: pepper.rviz
pepper/urdf/: pepper.urdf
pepper/world/: my_world.world
workspace_track/pepper_virtual/pepper_control/config/: pepper_position_control.yaml  pepper_trajectory_control.yaml
workspace_track/pepper_virtual/pepper_gazebo_plugin/: CMakeLists.txt
workspace_track/pepper_virtual/pepper_gazebo_plugin/cfg/: IncrementConfig.cfg
workspace_track/pepper_virtual/pepper_gazebo_plugin/docs/: IncrementConfigConfig-usage.dox  IncrementConfigConfig.dox  IncrementConfigConfig.wikidoc
workspace_track/pepper_virtual/pepper_gazebo_plugin/launch/: pgp_exp.launch
workspace_track/pepper_virtual/pepper_gazebo_plugin/scripts/: laser_publisher.py  laser_publisher2.py  pub_lasers.py
workspace_track/pepper_virtual/pepper_gazebo_plugin/src/pepper_gazebo_plugin/cfg/: IncrementConfigConfig.py
workspace_track/pepper_virtual/pepper_gazebo_plugin/worlds/: arena.world
(+7 files in other folders)
